Added retrieval of primary calendar.